--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "android-windows": "react-native bundle --platform android --dev false --entry-file index.js --bundle-output android/app/src/main/assets/index.android.bundle --assets-dest android/app/src/main/res && react-native run-android"
   },
   "dependencies": {
+    "prop-types": "15.6.2",
     "react": "16.3.1",
     "react-native": "0.55.4"
   },
