--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "prop-types": "15.6.2",
     "react": "16.3.1",
-    "react-native": "0.55.4"
+    "react-native": "0.55.4",
+    "react-native-video": "^3.2.1"
   },
   "devDependencies": {
     "babel-jest": "23.4.2",
