--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   },
   "dependencies": {
     "prop-types": "15.6.2",
-    "react": "16.3.1",
+    "react": "^16.5.2",
     "react-native": "0.55.4",
-    "react-native-video": "^3.2.1"
+    "react-native-video": "^3.2.1",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.0"
   },
   "devDependencies": {
     "babel-jest": "23.4.2",
